test/compiler/negative/package.kt
/**
 * Having a testcase for all possible code is nigh impossible. Instead, here are test cases for all the reasons
 * the compiler could reject some code. After all, semantic validation is built to reject the invalid subset
 * of the infinite set of possible inputs (as opposed to accepting the valid subset of all possible inputs).
 */
package matchers.compiler.negative